; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_testrdb.c_testrdb_get_key.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_testrdb.c_testrdb_get_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_OK = common dso_local global i32 0, align 4
@REDISMODULE_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testrdb_get_key(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 2
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @RedisModule_WrongArity(i32* %13)
  %15 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %15, i32* %4, align 4
  br label %31

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32**, i32*** %6, align 8
  %19 = getelementptr inbounds i32*, i32** %18, i64 1
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* @REDISMODULE_WRITE, align 4
  %22 = call i32* @RedisModule_OpenKey(i32* %17, i32* %20, i32 %21)
  store i32* %22, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i32* @RedisModule_ModuleTypeGetValue(i32* %23)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @RedisModule_CloseKey(i32* %25)
  %27 = load i32*, i32** %5, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @RedisModule_ReplyWithString(i32* %27, i32* %28)
  %30 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %16, %12
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local i32* @RedisModule_OpenKey(i32*, i32*, i32) #1

declare dso_local i32* @RedisModule_ModuleTypeGetValue(i32*) #1

declare dso_local i32 @RedisModule_CloseKey(i32*) #1

declare dso_local i32 @RedisModule_ReplyWithString(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
